@@ -1,3 +1,10 @@
+2010-04-08  Stan Shebs  <stan@codesourcery.com>
+
+	* breakpoint.c (default_collect_info): New function.
+	(breakpoints_info): Call it.
+	(maintenance_info_breakpoints): Ditto.
+	(tracepoints_info): Ditto.
+
 2010-04-08  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* i387-tdep.c (i387_collect_xsave): Re-indent.
